--- a/src/GridLike.Migrations.Sqlite/GridLike.Migrations.Sqlite.csproj
+++ b/src/GridLike.Migrations.Sqlite/GridLike.Migrations.Sqlite.csproj
@@ -4,10 +4,18 @@
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <GenerateRuntimeConfigurationFiles>True</GenerateRuntimeConfigurationFiles>
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\GridLike\GridLike.csproj" />
+      <ProjectReference Include="..\GridLike.Data\GridLike.Data.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.2">
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        <PrivateAssets>all</PrivateAssets>
+      </PackageReference>
     </ItemGroup>
 
 </Project>
