fixed postgres mispelling, config documentation

--- a/src/GridLike.Migrations.PostgreSQL/GridLike.Migrations.PostgreSQL.csproj
+++ b/src/GridLike.Migrations.PostgreSQL/GridLike.Migrations.PostgreSQL.csproj
@@ -5,6 +5,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <GenerateRuntimeConfigurationFiles>True</GenerateRuntimeConfigurationFiles>
+        <RootNamespace>GridLike.Migrations.PostgreSQL</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
